--- a/index.html
+++ b/index.html
@@ -14,14 +14,22 @@
     </style>
   </head>
   <body>
-    <script src="/socket.io/socket.io.js"></script>
-    <script>
-      var socket = io();
-    </script>
-    
+    <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
+    <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
+
     <ul id="messages"></ul>
-    <form action="">
+    <form id="f" action="">
       <input id="m" autocomplete="off" /><button>Send</button>
     </form>
+
+
+    <script>
+      var socket = io();
+      $('#f').submit(function(event){
+        socket.emit('chat_message', $('#m').val());
+        $('#m').val('');
+        return false;
+      })
+    </script>
   </body>
 </html>
