--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@
           $('#m').val('');
           return false;
         })
+
+        socket.on('old_messages', function (messages) {
+          for (var i = 0; i < messages.length; i++) {
+            console.log(messages[i]);
+            $('#messages').append($('<li>').text(messages[i]));
+          }
+        });
+
         socket.on('chat_message', function (message) {
           $('#messages').append($('<li>').text(message));
         });
